Oct 04, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- modified that ugly ut2 master hack a little

Oct 03, 2002: Alex Burger <alex@fragit_dot_net>
- Added sound support actions for: xqf start, xqf quit, update, refresh,
  stop, server connect, redial success.  Added Preferences / Sound Options.
  If file does not start with a / (except for Player), prepends user's
  config folder (~/.qf/)

Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- add popup while redialing

Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- rename Unreal 2003 Demo -> UT 2003

Oct 01, 2002: Alex Burger <alex@fragit_dot_net>
- Update status bar for redial

Oct 01, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix segfault because of format error and some cast warnings
- use q3 parse and launch functions for SOF2
- reinsert signal handlers for changing debug level
- set sensitivity of cancel redial button

Sep 30, 2002: Alex Burger <alex@fragit_dot_net>
- Added busy server redial.  Server - Cancel Redial to stop

Sep 29, 2002: Alex Burger <alex@fragit_dot_net>
- Added Soldier of Fortune 2 support and master

Sep 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- q3a gametypes for afterwards. that stuff should really be stored in a runtime
  parsed, external file

Sep 26, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Catalan & Spanish translations

Sep 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- improved debug functions, debug level can be in- and decreased with SIGUSR1
  and SIGUSR2
- proper launch function for Half-Life

Sep 16, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- changed some macros to make cvs work with older autoconf/automake

Sep 15, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- new master type "file", reads ip addresses from a file

Sep 14, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- support for Unreal Tournament 2003 Demo. No master yet. If you know one, tell
  me

Sep 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>