@@ -1,3 +1,11 @@
+Oct 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- clean up sound code
+- increased version to 0.9.9.2 to make UT2003 server lists visible.
+  Note for those using the CVS Version: You need a qstat that supports 'ut2s'
+  as gametype. You can generate a suitable config file at
+  http://qstat.uglypunk.com/. Keep in mind that you may have to remove the file
+  when a new qstat version is released!
+
 Oct 04, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - modified that ugly ut2 master hack a little
 
